# conditional-liquidity

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
crates/solana-conditional-liquidity/: Cargo.toml  LICENSE  README.md
crates/solana-conditional-liquidity/src/: lib.rs  origin.rs  registry.rs
programs/segmenter-registry/: Cargo.toml  README.md
programs/segmenter-registry/src/: errors.rs  lib.rs
programs/segmenter-registry/src/instructions/: add_segmenter.rs  change_admin.rs  create_registry.rs  initialize.rs  mod.rs  remove_segmenter.rs
programs/segmenter-registry/src/state/: config.rs  mod.rs  registry.rs
tests/: helpers.ts  segmenterRegistry.spec.ts  transaction.ts
tests/mock/: mockWallet.ts
