[package]
name = "solana-conditional-liquidity"
version = "1.0.0"
description = "LP framework for Solana DEXs"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/DFlowProtocol/conditional-liquidity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
solana-program = ">=1, <=2"

[dev-dependencies]
base64 = "0.22.1"
